--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,80 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 
-body{
+body {
     background-image: url(./assets/gora_reka_derevia_160481_2560x1440.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
+
+.container {
+    max-width: 10000px;
+    margin: auto 0;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 30px;
+}
+
+
+.navbar {
+
+    padding: 18px 80px;
+    border-radius: 50rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
+    z-index: 1000;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    opacity: 0.8;
+    border: 2px solid rgb(255, 255, 255);
+}
+
+
+h2 {
+    font-weight: 900;
+    font-size: 50px;
+    text-align: center;
+    color: #ffffff;
+}
+
+
+.flex {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
+
+
+.navbar-logo h2 {
+    margin: 0;
+}
+
+.navbar-links {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+}
+
+.navbar-links li a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    transition: color 0.2s;
+}
+
+.navbar-links li a:hover {
+    color: #ffca28;
+    /* hover rang */
+}
+
+
 
 
 .form {
@@ -142,3 +208,89 @@ body{
     height: 1.5rem;
 }
 
+
+.user-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 20px;
+}
+
+.user-card {
+    background-color: #f0f0f0;
+    border-radius: 10px;
+    padding: 15px 20px;
+    width: 200px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s;
+}
+
+.user-card:hover {
+    transform: translateY(-5px);
+}
+
+
+.wrapper {
+    padding: 40px 40px;
+    border-radius: 60px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    opacity: 0.8;
+    border: 2px solid rgb(255, 255, 255);
+    background-color: rgba(0, 0, 0, 0.6);
+    display: flex;
+    flex-direction: column;
+    gap: 28px;
+}
+
+
+.img {
+    width: 56px;
+    height: 56px;
+    background-color: red;
+    border-radius: 50%;
+}
+
+
+
+h3 {
+    color: white;
+    font-weight: 900;
+}
+
+p {
+    font-weight: 900;
+    color: white;
+}
+
+.content {
+    display: flex;
+    gap: 10px;
+}
+
+.content div {
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+}
+
+.card {
+  display: flex;
+  gap: 20px;
+  border-radius: 8px;
+  align-items: center;
+  margin-right: auto;
+  margin-left: auto;
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;
+  padding: 10px;
+  background-color: #212121;
+  width: 100%; /* 🔥 shu qo‘shiladi */
+  box-sizing: border-box; /* padding va border width ichida hisoblanadi */
+}
+
+
+h4{
+    color: green;
+    margin-left: 600px;
+    margin-top: 15px;
+}
