--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 }
 
 html{
+    width: 100%;
     height: 100%;
 }
 
@@ -251,7 +252,6 @@ h2 {
 .img {
     width: 56px;
     height: 56px;
-    background-color: red;
     border-radius: 50%;
 }
 
