--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@import "tailwindcss";
+@plugin "daisyui";
+
+
+
 * {
     margin: 0;
     padding: 0;
@@ -33,7 +38,7 @@ h5 {
 }
 
 .navbar {
-
+    margin-top: -400px;
     padding: 18px 80px;
     border-radius: 5px;
     display: flex;
@@ -286,6 +291,7 @@ p {
 .card {
     display: flex;
     gap: 20px;
+    flex-direction: row;
     border-radius: 8px;
     align-items: center;
     margin-right: auto;
@@ -395,21 +401,11 @@ textarea {
 
 
 
-body {
-    width: 100%;
-    height: 100%;
-    background-image: url(./assets/gora_reka_derevia_160481_2560x1440.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    overflow: hidden;
-    position: relative;
-    /* kerak bo‘ladi */
-}
 
 body::before {
     content: "";
     position: absolute;
-    top: -50px;
+    top: 0px;
     left: 0;
     bottom: 0;
     width: 100%;
@@ -430,16 +426,18 @@ body::before {
     gap: 28px;
     min-height: 90vh;
     box-sizing: border-box;
+    width: 100vw;
+    margin: 0;
 }
 
 
-.chat{
+.chat {
     display: flex;
     gap: 20px;
     align-items: center;
 }
 
-.img{
+.img {
     padding-left: 5px;
     background-color: white;
     border-radius: 50%;
